apps/palmr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palmr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palmr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: palmr
    spec:
      containers:
        - name: palmr
          image: kyantech/palmr:v3.1.6-beta
          ports:
            - name: http
              containerPort: 5487
          resources:
            requests:
              memory: 300Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: data
              mountPath: /app/server
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: palmr-pvc
