apps/palmr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palmr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/configuration-snippet:
      sub_filter '</head>' '<script src="https://rybbit.nasus.dev/api/script.js" data-site-id="7" defer></script></head>';
      sub_filter_once on;
      sub_filter_types text/html;
spec:
  ingressClassName: nginx
  rules:
    - host: files.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: palmr
                port:
                  name: http
  tls:
    - hosts:
        - files.nasus.dev
      secretName: palmr-tls
